--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Speak</title>
+    <style> 
+    textarea{ 
+        width: 90%;
+        padding:1rem;
+        display: block;
+         margin:1rem;
+        height:10vh;    
+
+    }
+        </style>
+
 </head>
 <body>
     <h1>BANANANNANANA</h1>
+    <br>
+    <textarea id="txt-input" placeholder="Enter your test we will convert it into banana!!"> </textarea>
+    <button id="btn-translate" style="background-color:aqua;">Translate</button>
+    <script src="app.js" type="text/javascript"> </script>
 </body>
 </html>
