--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <br>
     <textarea id="txt-input" placeholder="Enter your test we will convert it into banana!!"> </textarea>
     <button id="btn-translate" style="background-color:aqua;">Translate</button>
-    <script src="app.js" type="text/javascript"> </script>
+    <script src="app.js" type="text/javascript"> </script>  
+    <!-- top to bottom hota h code run so script jaha chaiye waha dalo  -->
 </body>
 </html>
