--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         height:10vh;    
 
     }
+    #txt-output{
+        display: block;
+        border: 1px solid black;
+        padding: 1rem;
+        margin:1rem;
+        height:10vh;  
+        width:90%;
+    }
         </style>
 
 </head>
@@ -22,7 +30,10 @@
     <br>
     <textarea id="txt-input" placeholder="Enter your test we will convert it into banana!!"> </textarea>
     <button id="btn-translate" style="background-color:aqua;">Translate</button>
+    
+    <div style="font-size: x-large;" >Output is here ⬇️</div>
+    <div id="txt-output"> </div>
     <script src="app.js" type="text/javascript"> </script>  
-    <!-- top to bottom hota h code run so script jaha chaiye waha dalo  -->
+    <!-- top to bottom hota h code run so script jaha chaiye waha dalo, iskeneeche wali line execute ni hongi js me -->
 </body>
 </html>
